# sem-search-db

./: .dockerignore  .gitignore  Dockerfile  README.md  default.env  nginx.default  pyproject.toml  start-server.sh  tests.sh
.github/workflows/: lint.yml  starter.yaml  test.yml
archiv/: admin.py  api_views.py  filters.py  models.py  serializers.py  tests.py  utils.py  views.py
archiv/fixtures/: jhp.vrt
archiv/management/commands/: create_embeddings.py  dl_verticals.py  process_verticals.py  vectorize_snippets.py
archiv/migrations/: 0001_initial.py  0002_textsnippet_lang_code_textsnippet_vectorized.py  0003_textsnippet_vector_column_and_more.py  0004_create_trigger.py  0005_userinput.py  0006_alter_userinput_options_userinput_userinput_nomic.py
archiv/templates/archiv/: question.html
djangobaseproject/: settings.py  urls.py
llama/: download-model.sh
templates/partials/: footer.html  head.html  navbar.html
webpage/: metadata.py  tests.py  urls.py  views.py  webpage_content_processors.py
webpage/templates/webpage/: imprint.html  index.html
webpage/templatetags/: webpage_extras.py
