[project]
name = "semantic-search-database"
version = "0.1.0"
description = "A Django/Postgresql based database to process, store and expose textual data published through the project 'Unified Corpora'"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "acdh-django-browsing>=4.1.1",
    "django>=6.0.5",
    "django-autocomplete-light>=4.0.0",
    "django-extensions>=4.1",
    "django-spaghetti-and-meatballs>=0.4.2",
    "gunicorn>=26.0.0",
    "llama-cpp-python>=0.3.23",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "ruff>=0.15.13",
]
